--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -8,7 +8,7 @@ framework:
     serializer:
         enabled: true
         default_context:
-            datetime_format: 'Y-m-d H:i' # Format ISO 8601, mais tu peux en changer si besoin
+            datetime_format: 'd.m.Y H:i' # Format ISO 8601, mais tu peux en changer si besoin
     #esi: true
     #fragments: true
 
